--- a/src/app/styles/filelist.css
+++ b/src/app/styles/filelist.css
@@ -1,14 +1,63 @@
+
+/* Header */
+
+.container {
+    padding: 20px;
+    max-width: 800px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+h1 {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+/* 
+ * Button Group
+*/
+
+.button-group button {
+    padding: 8px 16px 4px 16px;
+    background-color: #fff;
+    color: #fff;
+    border: 0px solid #fff;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.button-group button:hover {
+    background-color: #ccc;
+}
+
+.button-group .icon {
+    width: 24px;
+    height: 24px;
+}
+
+/* 
+ * File List
+*/
+
 .file-list {
     margin-top: 20px;
 }
 
 .file-item {
     display: flex;
-    background-color: #111;
+    background-color: #000;
     border-radius: 5px;
-    padding: 8px;
+    justify-content: space-between;
     align-items: center;
-    transition: background-color 0.3s ease;
+    padding: 5px;
+
+    transition: background-color 0.3s ease
 }
 
 .file-item:hover {
@@ -22,14 +71,63 @@
 }
 
 .file-item a {
+    flex-grow: 1;
     text-decoration: none;
     font-size: 18px;
     color: #fff;
-    flex-grow: 1;
+}
+
+.file-item p {
+    color: #ccc;
+    text-decoration: none;
+    font-size: 18px;
 }
 
 .file-item a:hover {
     text-decoration: underline;
+}
+
+.download-zip-each-btn {
+    background-color: #fff;
+    color: #fff;
+    padding: 5px 5px;
+    margin-right: 0px;
+    cursor: pointer;
+    border-radius: 4px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    
+    width: 20px;
+    height: 20px;
+}
+
+.file-item:hover .download-zip-each-btn {
+    opacity: 1;
+}
+
+.download-zip-each-btn:hover {
+    background-color: #ccc;
+}
+
+.delete-btn {
+    background-color: #fff;
+    color: #fff;
+    padding: 5px 5px;
+    cursor: pointer;
+    border-radius: 4px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    
+    width: 20px;
+    height: 20px;
+}
+
+.file-item:hover .delete-btn {
+    opacity: 1;
+}
+
+.delete-btn:hover {
+    background-color: #ccc;
 }
 
 .empty-message {
@@ -37,4 +135,26 @@
     color: #aaa;
     font-size: 16px;
     margin-top: 10px;
+}
+
+/*
+ * Control Links
+*/
+
+.control-links {
+    display: flex;
+    flex-direction: row;
+}
+
+.back-link {
+    display: block;
+    margin-top: 20px;
+    font-size: 18px;
+    text-decoration: none;
+    color: #fff;
+    margin-right: 20px;
+}
+
+.back-link:hover {
+    text-decoration: underline;
 }
