--- a/src/app/styles/navbar.css
+++ b/src/app/styles/navbar.css
@@ -1,7 +1,7 @@
 #navbar {
   width: 100%;
   background-color: #222;
-  padding: 20px;
+  padding: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,7 +19,37 @@
   color: white;
 }
 
+.navbar-logo-container { 
+  /* #navbar padding + .nav-logo-container margin-left == 20 */
+  margin-left: 15px;
+  position: relative;
+  display: inline-block;
+  height: 40px;
+}
+
+.navbar-logo {
+  height: 100%;
+  display: block;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.navbar-hover-logo {
+  height: 100%;
+  display: block;
+  transition: opacity 0.3s ease-in-out;
+  
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+
+/* .navbar-logo-container:hover .navbar-logo { opacity: 0; } */
+.navbar-logo-container:hover .navbar-hover-logo { opacity: 1; }
+
 .nav {
+  /* #navbar padding + .nav padding == 20 */
+  padding: 15px;
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
