--- a/src/app/styles/filelist.css
+++ b/src/app/styles/filelist.css
@@ -78,7 +78,8 @@ h1 {
 }
 
 .file-item .loading-icon {
-    height: 18px;
+    height: 50px;
+    margin: -16px 0;
     width: auto;
     vertical-align: middle;
 }
