--- a/src/app/styles/components/profile.css
+++ b/src/app/styles/components/profile.css
@@ -11,6 +11,7 @@
   width: 100%;
   padding: 30px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  box-sizing: border-box;
 }
 
 .profile-image {
