--- a/src/app/styles/components/list/booklist.css
+++ b/src/app/styles/components/list/booklist.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background-color: #121212;
+  background-color: #000;
   color: white;
 }
 
@@ -16,16 +16,25 @@
 
 .book-list {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: 15px;
+  justify-content: center;
 }
 
 .book-item {
   display: flex;
-  background-color: #1a1a1a;
+  background-color: #000;
   padding: 15px;
   border-radius: 8px;
   align-items: center;
+  flex: 1 1 auto;
+  min-width: 256px;
+  max-width: 384px;
+}
+
+.book-item:hover {
+  background-color: #222;
+  transition: background-color 0.3s;
 }
 
 .book-cover {
