--- a/src/app/styles/drive.css
+++ b/src/app/styles/drive.css
@@ -1,3 +1,20 @@
+.main-container {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
+    background-color: #000;
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.content-container {
+    display: flex;
+    flex-grow: 1;
+    height: auto;
+    position: relative;
+}
 
 /* Remove Scroll Bar */
 ::-webkit-scrollbar { display: none; }
