--- a/src/app/styles/components/list/booklist.css
+++ b/src/app/styles/components/list/booklist.css
@@ -17,20 +17,22 @@
 .book-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
   justify-content: center;
+
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .book-item {
   display: flex;
-  background-color: #000;
+  background-color: transparent;
   padding: 15px;
-  border-radius: 8px;
+  border-radius: 0px;
   align-items: center;
   flex: 1 1 auto;
 
-  min-width: 256px;
-  max-width: 384px;
+  min-width: 384px;
+  
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .book-item:hover {
@@ -57,6 +59,8 @@
   margin-left: 15px;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  justify-content: flex-start;
 }
 
 .book-title {
