--- a/src/app/styles/components/list/booklist.css
+++ b/src/app/styles/components/list/booklist.css
@@ -59,7 +59,10 @@
   margin-left: 15px;
   display: flex;
   flex-direction: column;
+
   height: 100%;
+  width: 250px;
+  
   justify-content: flex-start;
 }
 
