--- a/src/app/styles/components/list/booklist.css
+++ b/src/app/styles/components/list/booklist.css
@@ -5,7 +5,6 @@
   align-items: flex-start;
   padding: 20px;
   background-color: #222;
-  border-radius: 8px;
   margin-bottom: 20px;
   
   user-select: none;
@@ -45,9 +44,17 @@
 /* 오른쪽 태그 검색 */
 .right-search {
   display: flex;
+  flex-direction: column;
+  width: 50%;
+  max-height: 120px;
+  overflow: hidden;
+}
+
+.right-search .tag-container {
+  display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  width: 50%;
+  overflow-y: auto;
 }
 
 .right-search .tag-icon {
