--- a/src/app/styles/components/list/booklist.css
+++ b/src/app/styles/components/list/booklist.css
@@ -1,7 +1,7 @@
 /* @/app/styles/components/list/booklist.css */
 
 /* 検索セクションのスタイル */
-.search-section {
+#search-section {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -15,14 +15,14 @@
 }
 
 /* 左側の検索エリア */
-.left-search {
+#left-search {
   display: flex;
   flex-direction: column;
   gap: 10px;
   width: 45%;
 }
 
-.left-search input {
+#left-search input {
   padding: 8px;
   border: none;
   border-radius: 4px;
@@ -32,18 +32,18 @@
   color: white;
 }
 
-.left-search input:focus {
+#left-search input:focus {
   outline: none;
   border: none;
 }
 
-.left-search input:disabled {
+#left-search input:disabled {
   background-color: #555;
   cursor: not-allowed;
 }
 
 /* 右側のタグ検索エリア */
-.right-search {
+#right-search {
   display: flex;
   flex-direction: column;
   width: 50%;
@@ -51,21 +51,21 @@
   overflow: hidden;
 }
 
-.right-search .tag-container {
+#right-search .tag-container {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
   overflow-y: auto;
 }
 
-.right-search .tag-icon {
+#right-search .tag-icon {
   width: 16px;
   height: 16px;
   margin-right: 5px;
 }
 
-.right-search .tag,
-.right-search .main-tag {
+#right-search .tag,
+#right-search .main-tag {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -76,29 +76,30 @@
   cursor: pointer;
 }
 
-.right-search .tag {
+#right-search .tag {
   color: #bbb;
   border: 1px solid #bbb;
   padding: 4px 9px;
   background: transparent;
 }
 
-.right-search .tag.selected {
+#right-search .tag.selected {
   border: 1.5px solid white;
   padding: 3.5px 8.5px;
   background-color: #222;
 }
 
-.right-search .main-tag.selected {
+#right-search .main-tag.selected {
   border: 2px solid white;
   padding: 3px 8px;
 }
 
-.right-search .tag:hover { background-color: #777; }
-.right-search .main-tag:hover { filter: brightness(120%); }
+#right-search .tag:hover { background-color: #777; }
+#right-search .main-tag:hover { filter: brightness(120%); }
 
 /* 書籍リストのスタイル */
-.book-list-container {
+#book-list-container {
+  width: 100vw;
   display: flex;
   flex-direction: column;
 }
