--- a/src/app/styles/components/sidebar.css
+++ b/src/app/styles/components/sidebar.css
@@ -11,6 +11,12 @@
     align-items: center;
 }
 
+@media (max-width: 600px) {
+    .sidebar {
+        display: none;
+    }
+}
+
 #profile-section {
     margin: 30px 0 50px 0;
     text-align: center;
