--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -66,6 +66,7 @@ html, body, .main-container {
     display: flex;
     gap: 20px;
     margin-top: 30px;
+    white-space: nowrap;
 }
 
 .buttons button {
