상수 수정, 프로필 이름 수정

--- a/src/app/styles/admin.css
+++ b/src/app/styles/admin.css
@@ -13,3 +13,8 @@
   overflow-y: auto;
   background: #000;
 }
+
+/* Remove Scroll Bar */
+::-webkit-scrollbar { display: none; }
+html { scrollbar-width: none; }
+body { -ms-overflow-style: none; }
