book검색시 focus 해제 되는 버그 수정 - 영문

--- a/src/app/styles/components/list/booklist.css
+++ b/src/app/styles/components/list/booklist.css
@@ -42,6 +42,11 @@
   cursor: not-allowed;
 }
 
+#left-search input.disabled-input {
+  background-color: #555;
+  cursor: not-allowed;
+}
+
 /* 右側のタグ検索エリア */
 #right-search {
   display: flex;
