kakao, everytime browser 대응

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -9,6 +9,11 @@ html, body, .main-container {
     flex-direction: column;
 }
 
+/* Remove Scroll Bar */
+::-webkit-scrollbar { display: none; }
+html { scrollbar-width: none; }
+body { -ms-overflow-style: none; }
+
 .content-container {
     display: flex;
     flex-grow: 1;
