--- a/src/app/styles/drive.css
+++ b/src/app/styles/drive.css
@@ -16,10 +16,7 @@
     position: relative;
 }
 
-.div-100vw {
-    width: 100vw;
-}
-
+.div-100vw { width: 100vw; }
 /* Remove Scroll Bar */
 ::-webkit-scrollbar { display: none; }
 html { scrollbar-width: none; }
@@ -44,6 +41,26 @@ h1 {
     font-weight: bold;
 }
 
+/* Infomation Section at drive/book */
+#book-head-info {
+    margin: 0;
+    padding: 5px 10px;
+
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    
+    text-align: center;
+    overflow-x: scroll;
+    user-select: none;
+}
+
+#book-head-info p {
+    margin: 0;
+    min-width: 100%;
+    font-size: 14px;
+    white-space: nowrap;
+    color: #555;
+}  
+
 /* Button Group */
 .button-group button {
     padding: 8px 16px 4px 16px;
@@ -64,7 +81,7 @@ h1 {
 }
 
 /*
- * Control Links
+* Control Links
 */
 
 .control-links {
@@ -86,12 +103,12 @@ h1 {
 }
 
 /*
- * End of booklist
+* End of booklist
 */
 .end-of-booklist {
     margin: 50px 0px;
     width: 100vw;
-
+    
     display: flex;
     justify-content: center;
 }
