--- a/src/app/styles/components/list/booklist.css
+++ b/src/app/styles/components/list/booklist.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: flex-start;
   padding: 20px;
-  background-color: #000;
+  background-color: transparent;
   
   user-select: none;
   -webkit-user-select: none;
