--- a/src/app/styles/drive.css
+++ b/src/app/styles/drive.css
@@ -43,10 +43,9 @@ h1 {
 
 /* Infomation Section at drive/book */
 #book-head-info {
-    margin: 0;
-    padding: 5px 10px;
-
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    margin-bottom: -5px;
+    padding: 5px 10px 0px;
+    width: 100vw;
     
     text-align: center;
     overflow-x: scroll;
