--- a/src/app/styles/components/navbar.css
+++ b/src/app/styles/components/navbar.css
@@ -1,5 +1,5 @@
 #navbar {
-  width: 100%;
+  width: 100vw;
   background-color: #222;
   padding: 5px;
   display: flex;
@@ -53,6 +53,8 @@
   padding: 15px;
   display: flex;
   gap: 20px;
+  min-width: 0;
+  overflow-x: hidden;
   flex-wrap: nowrap;
 }
 
