chore: 소스  파일 상단에 @ 기반 파일 주소 추가l

--- a/src/styles/thanks.css
+++ b/src/styles/thanks.css
@@ -1,8 +1,6 @@
+/* @/styles/thanks.css */
 
-/*
- * Remove Scroll Bar
-*/
-
+/* Remove Scroll Bar */
 ::-webkit-scrollbar { display: none; }
 html { scrollbar-width: none; }
 body { -ms-overflow-style: none; }
