--- a/src/styles/components/profile.css
+++ b/src/styles/components/profile.css
@@ -1,6 +1,6 @@
+/* @/styles/component/profile.css */
 
 /* Profile */
-
 .profile-item:first-of-type {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
