--- a/src/styles/components/admin/logsection.css
+++ b/src/styles/components/admin/logsection.css
@@ -1,14 +1,18 @@
 /* @/app/styles/components/unique/logsection.css */
 
 #log-section {
+  flex: 1;
   padding: 20px;
-  background-color: #000;
-  overflow-y: auto;
-  height: 100%;
-  h2 { padding: 20px 0; margin: 0; }
+  height: calc(100%-40px);
+
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  background: #000;
 }
 
 .log-list {
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: 8px;
