--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -49,7 +49,7 @@ header {
   cursor: pointer;
   
   padding: 10px 20px;
-  margin: 0;
+  margin-top: 20px;
   border-radius: 5px;
   font-size: 14px;
   
