chore: border-radius: 0px 항목을 명문화

--- a/src/styles/components/console/jeboconsole.css
+++ b/src/styles/components/console/jeboconsole.css
@@ -10,6 +10,7 @@
 #jebo-container textarea {
   padding: 10px;
   border: none;
+  border-radius: 0px;
   box-sizing: border-box;
   
   font-family: Arial, sans-serif;
