--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -62,3 +62,33 @@ header {
 
   &:hover { background-color: #333; }
 }
+
+/* write container */
+#write-container {
+  display: flex;
+  flex-direction: row;
+
+  flex-grow: 1;
+  width: 100%;
+  height: calc(100vh - 66px);
+
+  background-color: #000;
+  color: white;
+}
+
+/* write preview */
+#write-preview {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  h2 { margin: 20px 0; }
+
+  .preview-content {
+    padding: 10px;
+    background-color: transparent;
+    border: 1px solid rgba(225, 225, 255, 0.2);
+    overflow-y: auto;
+    flex: 1;
+  }
+}
