--- a/src/styles/components/console/jeboconsole.css
+++ b/src/styles/components/console/jeboconsole.css
@@ -3,7 +3,14 @@
 #jebo-container {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 10px;
+}
+
+.jebo-input-row {
+  display: flex;
+  width: 100%;
+  gap: 10px;
+  input { flex-grow: 1; }
 }
 
 #jebo-container input[type="text"],
