feat: 폰트 디자인은 D2coding으로 변경

--- a/src/styles/components/admin/logsection.css
+++ b/src/styles/components/admin/logsection.css
@@ -36,7 +36,7 @@
 }
 
 .log-item {
-  font-family: monospace;
+  font-family: 'D2Coding', monospace;
   font-size: 14px;
   color: #ccc;
   white-space: pre-wrap;
