--- a/src/styles/drive.css
+++ b/src/styles/drive.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Arial, sans-serif;
+    font-family: 'D2Coding', monospace;
     background-color: #000;
     color: white;
     display: flex;
