--- a/src/styles/components/console/jeboconsole.css
+++ b/src/styles/components/console/jeboconsole.css
@@ -20,7 +20,7 @@
   border-radius: 0px;
   box-sizing: border-box;
   
-  font-family: Arial, sans-serif;
+  font-family: 'D2Coding', monospace;
   font-size: 14px;
   background-color: #181818;
   border: 1px solid rgba(225, 225, 255, 0.2);
