--- a/src/styles/components/list/booklist.css
+++ b/src/styles/components/list/booklist.css
@@ -23,6 +23,7 @@
 }
 
 #left-search input {
+  font-family: 'D2Coding', monospace;
   padding: 8px;
   border: none;
   border-radius: 4px;
@@ -55,6 +56,7 @@
 }
 
 #right-search .tag-container {
+  font-family: Arial, sans-serif;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
