--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,15 +1,23 @@
 /* @/styles/index.css */
 
+/* Global Font Styles*/
+@font-face {
+    font-family: 'D2Coding';
+    src: url('/font/D2coding-1.3.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+} 
+
 html, body, .main-container {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Arial, sans-serif;
+    font-family: 'D2Coding', Arial, sans-serif;
     background-color: #000;
     color: white;
     display: flex;
     flex-direction: column;
-}
+} 
 
 /* Remove Scroll Bar */
 ::-webkit-scrollbar { display: none; }
@@ -28,12 +36,12 @@ body { -ms-overflow-style: none; }
 .main-content {
     position: relative;
     flex-grow: 1;
-
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    
     -webkit-user-select:none;
     -moz-user-select:none;
     -ms-user-select:none;
@@ -55,6 +63,7 @@ body { -ms-overflow-style: none; }
 }
 
 .main-content-title {
+    font-family: Arial, sans-serif;
     padding: 0 20px;
     display: flex;
     flex-direction: column;
@@ -69,6 +78,7 @@ body { -ms-overflow-style: none; }
 }
 
 .buttons {
+    font-family: 'D2Coding';
     display: flex;
     gap: 20px;
     margin-top: 30px;
