--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,7 +57,7 @@ body { -ms-overflow-style: none; }
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/image/background/high.png') center/cover no-repeat;
+    background: url('/image/background/high-contrast.png') center/cover no-repeat;
     filter: brightness(15%);
     z-index: -1;
 }
