--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -4,6 +4,7 @@
   width: 100vw;
   background-color: #222;
   padding: 5px;
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
