--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,7 +12,7 @@ html, body, .main-container {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: 'D2Coding', Arial, sans-serif;
+    font-family: Arial, sans-serif;
     background-color: #000;
     color: white;
     display: flex;
