--- a/src/styles/components/bookcomponent.css
+++ b/src/styles/components/bookcomponent.css
@@ -1,40 +1,40 @@
 /* @/styles/components/bookcomponent.css */
 
 .book-item {
-    display: flex;
-    background-color: transparent;
-    padding: 15px;
-    border-radius: 0px;
-    align-items: center;
-    flex: 1 1 auto;
-    
-    overflow-x: scroll;
-    min-width: min(384px, calc(100vw-30px));
-    max-width: calc(100vw-30px);
-    
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-.book-item:hover {
-    background-color: #222;
-    transition: background-color 0.3s;
-}
-
-.book-cover {
+  font-family: 'D2Coding', monospace;
+  display: flex;
+  padding: 15px;
+  border-radius: 0px;
+  align-items: center;
+  flex: 1 1 auto;
+  
+  overflow-x: scroll;
+  min-width: min(384px, calc(100vw-30px));
+  max-width: calc(100vw-30px);
+  
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  
+  background-color: transparent;
+  transition: background-color 0.3s;
+  &:hover { background-color: #222; }
+  
+  /* Cover of the book */
+  .book-cover {
     width: 120px;
     height: 180px;
     overflow: hidden;
     border-radius: 6px;
-}
-
-.cover-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    cursor: pointer;
-}
-
-.book-info {
+    
+    .cover-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      cursor: pointer;
+    }
+  }
+  
+  /* Informations of the book */
+  .book-info {
     flex: 1;
     margin-left: 15px;
     display: flex;
@@ -42,47 +42,46 @@
     height: 100%;
     width: 250px;
     justify-content: flex-start;
-}
-
-.book-title {
-    font-size: 18px;
-    font-weight: bold;
-    color: white;
-    margin-bottom: 5px;
-}
-
-.book-author {
-    font-size: 14px;
-    color: gray;
-    margin-bottom: 10px;
-}
-
-.book-tags {
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    gap: 6px;
-    flex-wrap: wrap;
-}
-
-.main-tag {
-    display: flex;
-    align-items: center;
-    padding: 5px 10px;
-    border-radius: 6px;
-    font-size: 12px;
-    font-weight: bold;
-}
-
-.tag-icon {
-    width: 16px;
-    height: 16px;
-    margin-right: 5px;
-}
-
-.tag {
-    background: #444;
-    color: #bbb;
-    padding: 5px 10px;
-    font-size: 12px;
-    border-radius: 4px;
+    
+    .book-title {
+      font-size: 18px;
+      font-weight: bold;
+      color: white;
+      margin-bottom: 5px;
+    }
+    .book-author {
+      font-size: 14px;
+      color: gray;
+      margin-bottom: 10px;
+    }
+    
+    .book-tags {
+      font-family: Arial, Helvetica, sans-serif;
+      display: flex;
+      gap: 6px;
+      flex-wrap: wrap;
+      
+      .main-tag {
+        display: flex;
+        align-items: center;
+        padding: 5px 10px;
+        border-radius: 6px;
+        font-size: 12px;
+        font-weight: bold;
+        
+        .tag-icon {
+          width: 16px;
+          height: 16px;
+          margin-right: 5px;
+        }
+      }
+      .tag {
+        background: #444;
+        color: #bbb;
+        padding: 5px 10px;
+        font-size: 12px;
+        border-radius: 4px;
+      }
+    }
+  }
 }
