--- a/src/styles/components/list/booklist.css
+++ b/src/styles/components/list/booklist.css
@@ -20,30 +20,22 @@
   flex-direction: column;
   gap: 10px;
   width: 45%;
-}
 
-#left-search input {
-  font-family: 'D2Coding', monospace;
-  padding: 8px;
-  border: none;
-  border-radius: 4px;
-  box-sizing: border-box;
-  font-size: 14px;
-  background-color: #222;
-  color: white;
-}
-
-#left-search input:focus {
-  outline: none;
-  border: none;
-}
-
-#left-search input:disabled {
-  background-color: #555;
-}
-
-#left-search input.disabled-input {
-  background-color: #555;
+  input {
+    font-family: 'D2Coding', monospace;
+    font-size: 14px;
+    padding: 8px;
+    
+    border: none;
+    border-radius: 4px;
+    box-sizing: border-box;
+    &:focus { outline: none; border: none; }
+    
+    color: white;
+    background-color: #222;
+    &:disabled { background-color: #555; }
+    &.disabled-input { background-color: #555; }
+  }
 }
 
 /* 右側のタグ検索エリア */
@@ -53,63 +45,62 @@
   width: 50%;
   max-height: 120px;
   overflow: hidden;
+
+  .tag-container {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    overflow-y: auto;
+
+    .tag, .main-tag {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+
+      padding: 5px 10px;
+      font-size: 12px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .tag {
+      color: #bbb;
+      border: 1px solid #bbb;
+      padding: 4px 9px;
+      background: transparent;
+
+      &:hover { background-color: #777; }
+      &.selected {
+        border: 1.5px solid white;
+        padding: 3.5px 8.5px;
+        background-color: #222;
+      }
+    }
+    .main-tag {
+      .tag-icon {
+        width: 16px;
+        height: 16px;
+        margin-right: 5px;
+      }
+
+      &:hover { filter: brightness(120%); }
+      &.selected {
+        border: 2px solid white;
+        padding: 3px 8px;
+      }
+    }
+  }
 }
-
-#right-search .tag-container {
-  font-family: Arial, sans-serif;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  overflow-y: auto;
-}
-
-#right-search .tag-icon {
-  width: 16px;
-  height: 16px;
-  margin-right: 5px;
-}
-
-#right-search .tag,
-#right-search .main-tag {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-
-  padding: 5px 10px;
-  font-size: 12px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-#right-search .tag {
-  color: #bbb;
-  border: 1px solid #bbb;
-  padding: 4px 9px;
-  background: transparent;
-}
-
-#right-search .tag.selected {
-  border: 1.5px solid white;
-  padding: 3.5px 8.5px;
-  background-color: #222;
-}
-
-#right-search .main-tag.selected {
-  border: 2px solid white;
-  padding: 3px 8px;
-}
-
-#right-search .tag:hover { background-color: #777; }
-#right-search .main-tag:hover { filter: brightness(120%); }
 
 /* 書籍リストのスタイル */
-#book-list-container {
+#booklist-content-container {
   width: 100vw;
   display: flex;
   flex-direction: column;
 }
 
-.book-list {
+#booklist {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
