--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,21 +2,21 @@
 
 /* Global Font Styles*/
 @font-face {
-    font-family: 'D2Coding';
-    src: url('/font/D2coding-1.3.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'D2Coding';
+  src: url('/font/D2coding-1.3.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 } 
 
 html, body, .main-container {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
-    background-color: #000;
-    color: white;
-    display: flex;
-    flex-direction: column;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: Arial, sans-serif;
+  background-color: #000;
+  color: white;
+  display: flex;
+  flex-direction: column;
 } 
 
 /* Remove Scroll Bar */
@@ -25,44 +25,39 @@ html { scrollbar-width: none; }
 body { -ms-overflow-style: none; }
 
 .content-container {
-    display: flex;
-    flex-grow: 1;
-    height: auto;
-    position: relative;
+  display: flex;
+  flex-grow: 1;
+  height: auto;
+  min-width: 100vw;
+  position: relative;
+}
+
+.container {
+  padding: 20px;
+  max-width: 800px;
+  width: 80%;
+  margin: 0 auto;
 }
 
 /* Main Content section */
 
-.main-content {
-    position: relative;
-    flex-grow: 1;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
-    
-    z-index: 1;
-}
-
-.main-content::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('/image/background/high-contrast.png') center/cover no-repeat;
-    filter: brightness(10%);
-    z-index: -1;
-}
-
-.main-content-title {
+#main-content {
+  position: relative;
+  flex-grow: 1;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+  
+  z-index: 1;
+  
+  .main-content-title {
     font-family: Arial, sans-serif;
     padding: 0 20px;
     display: flex;
@@ -70,33 +65,46 @@ body { -ms-overflow-style: none; }
     align-items: flex-start;
     justify-content: center;
     background-color: none;
-}
-
-.main-content-title h1 {
-    padding: 0 0;
-    margin: 0 0;
-}
-
-.buttons {
+    
+    h1 {
+      padding: 0 0;
+      margin: 0 0;
+    }
+  }
+  
+  .buttons {
     font-family: 'D2Coding';
     display: flex;
     gap: 20px;
     margin-top: 30px;
     white-space: nowrap;
+    
+    button {
+      padding: 10px 30px;
+      font-size: 18px;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      border: 1px solid white;
+      
+      &:hover {
+        background-color: white;
+        color: black;
+      }
+    }
+  }
 }
 
-.buttons button {
-    padding: 10px 30px;
-    font-size: 18px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    border: 1px solid white;
-}
-
-.buttons button:hover {
-    background-color: white;
-    color: black;
+#main-content::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('/image/background/high-contrast.png') center/cover no-repeat;
+  filter: brightness(10%);
+  z-index: -1;
 }
