--- a/src/styles/thanks.css
+++ b/src/styles/thanks.css
@@ -1,156 +1,125 @@
 /* @/styles/thanks.css */
 
-/* Remove Scroll Bar */
-::-webkit-scrollbar { display: none; }
-html { scrollbar-width: none; }
-body { -ms-overflow-style: none; }
-
 /* Main Container */
-
-.thanks-content-container {
+#thanks-container {
   width: 80%;
   max-width: 800px;
   margin: 0 auto;
+  
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 30px;
-}
 
-/*
- * Title Section
-*/
-
-.title-section {
-  margin-top: 30px;
-  height: 35vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  /* background: url('/image/background/301.jpg') center/cover no-repeat; */
-}
-
-.title-background {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.9);
-}
-
-.title-logo {
-  position: absolute;
-  width: auto;
-  height: 50%;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.default-logo { opacity: 1; }
-.hover-logo { opacity: 0; }
-.title-background:hover .default-logo { opacity: 0; }
-.title-background:hover .hover-logo { opacity: 1; }
-
-/*
- * Profile Section
-*/
-
-.profile-section {
-  width: 100%;
-}
-
-/*
- * Server Information
-*/
-
-#server-info {
-  margin: 30px 50px;
-  text-align: center;
-
-  .server-version {
-    font-size: 16px;
-    color: #bbb;
-    margin-bottom: 10px;
-  }
-
-  .server-message {
-    font-size: 14px;
-    color: #bbb;
-    line-height: 1.6;
-  }
-}
-
-/*
- * Contributor Information
-*/
-
-#contributor-section {
-  width: 100%;
-  margin-bottom: 180px;
-
-  h3 {
-    font-size: 20px;
-    margin-bottom: 20px;
-    color: white;
-    text-align: center;
-  }
-
-  .contributor-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    gap: 0px;
+  /* Title Section */
+  #title-section {
+    margin-top: 30px;
+    height: 35vh;
     width: 100%;
-  }
-
-  .contributor-item {
     display: flex;
+    justify-content: center;
     align-items: center;
-    padding: 20px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    box-sizing: border-box;
-    transition: background-color 0.3s ease;
-  }
-  .contributor-item:hover { background-color: #222; }
 
-  .contributor-image {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    margin-right: 15px;
-  }
-
-  .contributor-text {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .contributor-name {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-    color: white;
+    .title-background {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.9);
+    }
+    
+    .title-logo {
+      position: absolute;
+      width: auto;
+      height: 50%;
+      transition: opacity 0.3s ease-in-out;
+    }
+  
+    .default-logo { opacity: 1; }
+    .hover-logo { opacity: 0; }
+    .title-background:hover .default-logo { opacity: 0; }
+    .title-background:hover .hover-logo { opacity: 1; }
   }
 
-  .contributor-role {
-    font-size: 14px;
-    color: gray;
-    margin: 0;
+  /* Profile Section */
+  #profile-section { width: 100%; }
+
+  /* Server Information */
+  #server-info {
+    margin: 30px 50px;
+    text-align: center;
+  
+    .server-version {
+      font-size: 16px;
+      color: #bbb;
+      margin-bottom: 10px;
+    }
+  
+    .server-message {
+      font-size: 14px;
+      color: #bbb;
+      line-height: 1.6;
+    }
   }
 
-  .alias-tag {
-    font-size: 12px;
-    color: white;
-    margin-left: 5px;
-  }
-
-  @media screen and (max-width: 512px) {
-    .contributor-grid { grid-template-columns: 1fr; }
-    .contributor-image { width: 50px; height: 50px; }
+  /* Contributor Information */
+  #contributor-section {
+    width: 100%;
+    margin-bottom: 180px;
+  
+    h3 {
+      font-size: 20px;
+      margin-bottom: 20px;
+      color: white;
+      text-align: center;
+    }
+  
+    .contributor-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      border-top: 1px solid rgba(255, 255, 255, 0.2);
+      gap: 0px;
+      width: 100%;
+    }
+  
+    .contributor-item {
+      display: flex;
+      align-items: center;
+      padding: 20px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      box-sizing: border-box;
+      transition: background-color 0.3s ease;
+      &:hover { background-color: #222; }
+    }
+  
+    .contributor-image {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      margin-right: 15px;
+    }
+  
+    .contributor-text {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+  
+      .contributor-name {
+        font-size: 16px;
+        font-weight: bold;
+        margin: 0;
+        color: white;
+      }
+      .contributor-role { font-size: 14px; color: gray; margin: 0; }
+      .alias-tag { font-size: 12px; color: white; margin-left: 5px; }
+    }
+  
+    @media screen and (max-width: 512px) {
+      .contributor-grid { grid-template-columns: 1fr; }
+      .contributor-image { width: 50px; height: 50px; }
+    }
   }
 }
