--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
   src: url('/font/D2coding-1.3.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 } 
 
 html, body, .main-container {
