feat: 기초적인 text list 페이지  제작

--- a/src/styles/components/bookcomponent.css
+++ b/src/styles/components/bookcomponent.css
@@ -9,7 +9,7 @@
   flex: 1 1 auto;
   
   overflow-x: scroll;
-  min-width: min(384px, calc(100vw-30px));
+  min-width: 384px;
   max-width: calc(100vw-30px);
   
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
