--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -105,7 +105,6 @@ body { -ms-overflow-style: none; }
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('/image/background/high-contrast.png') center/cover no-repeat;
-  filter: brightness(10%);
+  background: url('/image/background/background.webp') center/cover no-repeat;
   z-index: -1;
 }
