fix: thanks 페이지에서 로고 색상 변경에 transition 0.3s ease가 적요오디지 않았던 문제 해결

--- a/src/styles/thanks.css
+++ b/src/styles/thanks.css
@@ -38,6 +38,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      transition: opacity 0.3s ease;
     }
 
     .title-logo {
@@ -45,6 +46,7 @@
       width: auto;
       display: block;
       margin: 0 auto;
+      transition: opacity 0.3s ease;
     }
   
     .default-logo { opacity: 1; }
