chore: jeboconsole의 emptymessage의 생상을 회색으로 변경, 중앙 정렬

--- a/src/styles/components/console/jeboconsole.css
+++ b/src/styles/components/console/jeboconsole.css
@@ -36,6 +36,11 @@
 
   /* Pending Filelist */
   #file-list, .empty-message { margin: 10px 0; }
+  .empty-message {
+    width: 100%;
+    text-align: center;
+    color: #bbb;
+  }
 }
 
 #jebo-file-select-group {
