feat: code가 영역을 벗어날 경우, x-scrollable 하게 하고 너비가 넓어지지 않도록 수정

--- a/src/styles/components/console/textwriteconsole.css
+++ b/src/styles/components/console/textwriteconsole.css
@@ -2,10 +2,11 @@
 
 /* write console */
 #write-console {
-  flex: 1;
+  flex: 1 1 0;
   display: flex;
   flex-direction: column;
   padding: 20px;
+  min-width: 300px;
   height: calc(100% - 40px);
   h2 { margin: 20px 0; }
   
