--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -72,16 +72,18 @@ header {
   width: 100%;
   height: calc(100vh - 66px);
 
+  align-items: stretch;
   background-color: #000;
   color: white;
 }
 
 /* write preview */
 #write-preview {
-  flex: 1;
+  flex: 1 1 0;
   display: flex;
   flex-direction: column;
   padding: 20px;
+  min-width: 300px;
   h2 { margin: 20px 0; }
 
   .preview-content {
@@ -89,6 +91,7 @@ header {
     background-color: transparent;
     border: 1px solid rgba(225, 225, 255, 0.2);
     overflow-y: auto;
+    overflow-x: auto;
     flex: 1;
   }
 }
