feat: file-list id를 className으로 수정

--- a/src/styles/components/console/jeboconsole.css
+++ b/src/styles/components/console/jeboconsole.css
@@ -35,7 +35,7 @@
   textarea { resize: vertical; }
 
   /* Pending Filelist */
-  #file-list, .empty-message { margin: 10px 0; }
+  .file-list, .empty-message { margin: 10px 0; }
   .empty-message {
     width: 100%;
     text-align: center;
