--- a/src/styles/components/list/filelist.css
+++ b/src/styles/components/list/filelist.css
@@ -1,7 +1,7 @@
 /* @/styles/component/list/filelist.css */
 
 /* File List */
-#file-list {
+.file-list {
   font-family: 'D2Coding', monospace;
   
   .file-item {
